assets/css/style.css
/*---------------------------------- General Styles*/

html {
  height: 100vh;
  position: relative;
}

* {
  padding: 0;
  margin: 0;
}

@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Quicksand&display=swap');
h1,
h3,
h5 {
  font-family: 'Nunito', sans-serif;
}

p,
a,
button {
  font-family: 'Quicksand', sans-serif;
}

.container {
    overflow: hidden;
    margin: 0;
    padding: 0;
}


/*---------------------------------- Index page */

#menu {
  padding-top: 5vh;
  padding-bottom: 5vh;
  background: rgba(255, 255, 255, 0.4);
  border-radius: 10px;
}

#menu h1 {
  margin-bottom: 1rem;
}

#menu p a,
#menu button {
  width: 10vw;
}

#heroImage {
  background-image: url("../img/dayBreakerMainMenu.jpg");
  height: 100vh;
  width: 100%;
  background-size: 100%;
  padding-top: 10vh;
  padding-left: 30vw;
  padding-right: 30vw;
}

@media screen and (max-aspect-ratio: 1/1) {
    #heroImage {
        padding: 10vh 3vh 0 3vh;
    }

    #menu p a,
    #menu button {
        width: 60vw;
    }

    #heroImage {
        background-position-x: center;
        background-size: cover;
        background-repeat: none; 
    }
}

/* Main menu */

.btn--grey {
  background-color: rgba(255, 255, 255, 0.6);
  color: #000;
}

.btn--grey:hover {
  background: rgba(0, 0, 0, 0.4);
  color: #fafafa;
}


/*---------------------------------- Game pages */

canvas {
  margin: 0;
}


/* -------------------- Game win and lose ---------------------- */


/* Game win */

.gameScreen {
  position: relative;
}

.gameWon {
  position: absolute;
  z-index: 100;
  height: 100vh;
  width: 100vw;
  background: rgba(255, 255, 255, 0.3);
  margin: 0;
  display: none;
  overflow: none;
}

.winText {
  background: #fff;
  padding: 3vw;
  margin: 0 20vw;
  border-radius: 10px;
}

.winText div button {
  display: block;
  margin: 1vh 0;
}


/* Lose screen */

.gameLost {
  position: absolute;
  z-index: 100;
  height: 100vh;
  width: 100vw;
  background: rgba(0, 0, 0, 0.3);
  margin: 0;
  display: none;
  overflow: none;
}

.loseText {
  background: #fff;
  padding: 3vw;
  margin: 0 20vw;
  border-radius: 10px;
}

.loseText div button {
  display: block;
  margin: 1vh 0;
}


/* Pause functions */

.gamePaused {
  position: absolute;
  z-index: 100;
  height: 100vh;
  width: 100vw;
  background: rgba(255, 255, 255, 0.3);
  margin: 0;
  display: none;
  overflow: none;
}

.pauseText {
  background: #fff;
  padding: 3vw;
  margin: 0 20vw;
  border-radius: 10px;
}

.pauseText div button {
  display: block;
  margin: 1vh 0;
}

/* --------------------- Movement buttons --------------- */
.movementButtons {
    margin: 0;
    width: 49vw;
    border: none;
    display: inline;
    height: 15vh;
    background: none;
}

.movementButtons i {
    font-size: 4rem;
    color: rgba(0, 0, 0, 0.3);
}

/* ------------------------- Level 1 -------------------- */

.backgroundLevelOne {
  background-image: url("../img/breakoutBgOne.jpg");
  background-size: 100%;
  background-position-y: 80%;
  display: block;
}

@media screen and (max-aspect-ratio: 1/1) {
    .backgroundLevelOne {
        background-position: center;
        background-size: cover;
        background-repeat: none;
    }
}

/* ------------------------- Level 2 -------------------- */

.backgroundLevelTwo {
  background-image: url("../img/levelTwoBg.jpg");
  background-size: 100%;
  background-position-y: 30%;
  display: block;
}


/* ------------------------- Level 3 -------------------- */

.backgroundLevelThree {
  background: grey;
}

